Dear ImGui Test Engine
CHANGELOG

** Test Engine is regularly updated to support recent Dear ImGui version, when a change is required.
   Those changes are not all listed here.
** For a while this is going to ONLY INCLUDE BREAKING CHANGES.

2024/09/10:
- TestEngine: CaptureTool: rename ImGuiCaptureFlags_IncludeTooltipsAndPopups to
  ImGuiCaptureFlags_IncludePopups, as tooltips are always included by default in the capture.

2024/08/22
- TestEngine: fixes for internal changes and ImGuiPlatformIO use in 1.91.1 WIP.

2024/07/08:
- TestEngine: fixes an issue browsing menus inside a popup not inside a menu-bar. (#43) [@peterigz]

2024/07/02:
- TestEngine: fixes for 1.91.0 WIP changes.

2024/07/01:
- TestEngine: added helper IM_CHECK_FLOAT_NE_EPS() macro.

2024/06/06:
- TestEngine: WindowInfo() with ImGuiTestOpFlags_NoError doesn't spew error
  messages in log. (#52)

2024/06/04:
- TestEngine: UI: Added "Capture on error" checkbox to top bar.
- TestEngine: UI: Reworded "Refocus" to "KeepFocus" (inverted value) in top bar
  for consistency with other options.

2024/05/29:
- TestEngine: UI: Hovering 0xXXXXXXXX identifiers in test log attempts
  to visually locate them and provide options to Debug Break in the call
  emitting this item, similar to Dear ImGui Debug Log window.
  (require latest Dear ImGui version).
- TestEngine: Improved/standardized display of ImGuiTestRef in log.
  (e.g. computed ImGuiID more consistency printed).
- TestEngine: Fixed an issue using ctx->MenuXXX functions successively
  on the same menu. In some situation a second access would erroneously
  think the previous menu was still open.
- TestEngine: Fixed an issue where calling ItemDragAndDrop() would erroneously
  manipulate mouse threshold, creating inconsistency with normal use when using
  box-select and drag'n drop together.

2024/05/28:
- TestEngine: Fixes/support for 1.90.8 WIP changes.
- TestEngine: Fixed edge case calling ScrollTo() in non-Fast mode trying to